--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,7 @@ body::-webkit-scrollbar-track-piece {
 }
 
 .overflowImage{
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
